# marvin

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Improve-Marvin.md  LICENSE  README.md  SECURITY.md  boot-service-fabrica-migration.yaml  boot-service-issue-6.yaml  marvin.py  marvin_viz.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
prompt-library/: execute.md  explore.md  plan.md  profile_repo.md  repair.md  summarize.md  verify.md
prompt-library/appendices/: fabrica-executor.md  openchami-shared.md
prompt-library/briefs/: fabrica.md
prompt-library/reminders/: repo_hints.md  tool_use.md
repo_profiles/: openchami-core.yaml
src/openchami_coding_agent/: __init__.py  checkpoints.py  cli.py  config.py  config_init.py  constants.py  execution.py  git_activity.py  models.py  pipeline.py  plan_tracking.py  progress_view.py  prompts.py  repo_profile_builder.py  repo_profiles.py  reporting.py  summary_view.py  tui.py  ursa_adapter.py  ursa_compat.py  utils.py  verification.py
tests/: test_agent_customization.py  test_checkpoints.py  test_config_init.py  test_config_paths.py  test_execution_order.py  test_git_activity.py  test_pipeline.py  test_plan_tracking.py  test_progress_view.py  test_prompts.py  test_repo_profile_builder.py  test_repo_profiles.py  test_tui.py  test_ursa_adapter.py  test_ursa_compat.py  test_utils.py  test_verification.py
tokensmith-amsc-idp_aquamarine-rhea/docs/: tokensmith_feature_proposal.md
tokensmith-amsc-idp_brute-mackerel/: graph_store.sqlite
tokensmith-amsc-idp_brute-mackerel/checkpoints/: executor_checkpoint.db-shm  executor_checkpoint.db-wal  planner_checkpoint.db  planner_checkpoint.db-shm
tokensmith-amsc-idp_brute-mackerel/docs/: tokensmith_feature_proposal.md
tokensmith-amsc-idp_brute-mackerel/plan/: marvin.md  step-001-inspect-repository-and-restate-scope.md  step-002-establish-baseline-behavior-and-reproducible-test-commands.md  step-003-design-token-claim-model-and-configuration-schema-migration.md  step-004-implement-issuer-metadata-and-jwks-exposure.md  step-005-implement-typed-claims-and-configurable-signed-context-claim.md  step-006-add-project-scoped-minting-and-authorization-policy-interfaces.md  step-007-implement-service-token-issuance.md  step-008-add-proof-binding-sender-constrained-scaffolding-only.md  step-009-implement-rfc-8693-token-exchange-with-strict-error-handling.md  step-010-implement-delegation-and-act-claim-semantics.md  step-011-implement-delegated-or-envelope-token-model-if-required.md  (+3 more)
tokensmith-amsc-idp_cold-orange/: graph_store.sqlite
tokensmith-amsc-idp_colorful-hound/: graph_store.sqlite
tokensmith-amsc-idp_endothermic-cobra/: graph_store.sqlite
tokensmith-amsc-idp_frayed-goose/: graph_store.sqlite
tokensmith-amsc-idp_salty-cheetah/: graph_store.sqlite
tokensmith-amsc-idp_tense-fox/: graph_store.sqlite
tokensmith-amsc-idp_tomato-burmese/: graph_store.sqlite
tokensmith-amsc-idp_worn-carp/: graph_store.sqlite
(+106 files in other folders)
