[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openchami-coding-agent"
version = "0.1.0"
description = "YAML-driven multi-agent coding wrapper for OpenCHAMI using URSA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=0.2",
  "rich>=13.7",
  "ursa @ git+https://github.com/lanl/ursa.git",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
openchami-coding-agent = "openchami_coding_agent.cli:main"
marvin = "openchami_coding_agent.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openchami_coding_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src/openchami_coding_agent"]
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["ursa", "ursa.*"]
ignore_missing_imports = true
