[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openchami-coding-agent"
version = "0.1.0"
description = "YAML-driven multi-agent coding wrapper for OpenCHAMI using URSA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain-core>=0.2",
  "langgraph>=1.0",
  "langgraph-checkpoint-sqlite>=3.0",
  "lxml-html-clean>=0.4.0",
  "PyYAML>=6.0",
  "rich>=13.7",
  "textual>=0.79",
  "ursa-ai>=0.15.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
openchami-coding-agent = "openchami_coding_agent.cli:main"
marvin = "openchami_coding_agent.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openchami_coding_agent*"]

[tool.setuptools.package-data]
openchami_coding_agent = [
  "prompt_library/*.md",
  "prompt_library/appendices/*.md",
  "prompt_library/briefs/*.md",
  "prompt_library/reminders/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src/openchami_coding_agent"]
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["ursa", "ursa.*"]
ignore_missing_imports = true

[tool.uv]
override-dependencies = [
  "lxml>=6,<7",
  "lxml-html-clean>=0.4.0",
]
